--- a/columns.css
+++ b/columns.css
@@ -6,7 +6,7 @@
 
 .column {
 	float: left;
-	margin-right: 10%;
+	margin-right: 5%;
 	width: 100%;
 }
 
@@ -19,10 +19,10 @@
 	margin-right: 0;
 }
 
-.columns-2 .column { width: 45%; } /* ( 100 - $margin * ( $num_cols - 1 ) ) / $num_cols */
-.columns-3 .column { width: 26.666666666%; }
-.columns-4 .column { width: 17.5%; }
+.columns-2 .column { width: 47.5%; } /* ( 100 - $margin * ( $num_cols - 1 ) ) / $num_cols */
+.columns-3 .column { width: 30%; }
+.columns-4 .column { width: 21.25%; }
 
-.columns-3 .column-span-2 { width: 63.3333333%; } /* $width * $span + $margin * ( $span - 1 ) */
-.columns-4 .column-span-2 { width: 45%; }
-.columns-4 .column-span-3 { width: 72.2%; }
+.columns-3 .column-span-2 { width: 65%; } /* $width * $span + $margin * ( $span - 1 ) */
+.columns-4 .column-span-2 { width: 47.5%; }
+.columns-4 .column-span-3 { width: 73.75%; }
